--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
     "xlsx": "^0.18.5"
